# NumericRepresentations_gamma

./: .gitignore  ANALISIS_NAMESPACE_SPECIAL.md  ANALISIS_NORMALIZE_SIGN.md  ANALISIS_PACK2ARRAY_PERFECT_FORWARDING.md  Aún así habría forma de usar instrucciones simd.md  BINARIOS_NATURALES_ANALISIS.md  BUILD_SYSTEM_ARCHITECTURE.md  CMakeLists.txt  CMakeLists_msvc.txt  CMakePresets.json  CORRECCION_NORMALIZE_SIGN_APLICADA.md  CRASH  ConsejosGitHub.md  ConsejosGitLab.md  DOCUMENTACION_NAT_REG_DIGS_T.md  DOCUMENTACION_REG_DIGS_T.md  ENTORNO_STATUS.md  ERROR_ANALYSIS_20241106.md  ESTADO_DOCUMENTACION_MSVC.md  ESTADO_FINAL_PROYECTO.md  ESTRATEGIA_MIGRACION_BASE_POW_TO_SIZE.md  EXTENSIONES_NAT_REG_DIGS_APLICADAS.md  IMPLEMENTACION_TYPE_TRAITS_COMPLETA.md  IncludeFileList.md  LICENSE  MESON_TRANSITION_VERIFICATION.md  METODOS_ADICIONALES_AÑADIDOS.md  MSVC_TEMPLATE_METAPROGRAMMING_SOLUTION.md  MULTI_COMPILER_STATUS.md  NumericRepresentations.md  PARSER_CONSTEVAL_PURO.md  PARSE_FORMATS_IMPLEMENTADO.md  PARSE_IMPL_CT_COMPLETO.md  PLAN_TRABAJO_MAÑANA.md  PROPUESTA_CORRECCION_NORMALIZE_SIGN.md  README.md  README_COMPILACION.md  REFERENCIA_RAPIDA.md  RESUMEN_BINARIOS_NATURALES.md  RESUMEN_CORRECCIONES_CRITICAS.md  (+106 more)
.conan/: global.conf
.github/: copilot-instructions.md
build-clang/build-release/conan/: conan_meson_native.ini
build-gcc/build-release/conan/: conan_meson_native.ini  conanbuildenv-release-x86_64.bat
build-release/conan/: conan_meson_native.ini  conanbuildenv-release-x86_64.bat  conanvcvars.bat  deactivate_conanvcvars.bat
conan/: clang_profile  gcc_profile  msvc_profile
doc/: dig_t_analysis.md  dig_t_operadores_aritmeticos.md  dig_t_operadores_bitwise.md  dig_t_operadores_comparacion.md  dig_t_operadores_io.md  documentacion.docx  multi_compiler_guide.md
docs/: Doxyfile.in  meson.build
include/core/: dig_t.hpp  dig_t_display_helpers.hpp
include/core/internal/: AuxFunc.hpp  aux_func.hpp  auxiliary_functions.hpp  basic_types.hpp  conversions.hpp  exp_log.hpp  int_roots.hpp
include/core/internal/append/: expected.hpp  int128_ops.hpp  integers.hpp
include/core/internal/lookup_tables/: ExplicacionSumaRusa.md  LUT_of_primes.hpp  LUTs.hpp  lookup_tables.hpp  mulmod.hpp  primes.hpp  primes_compiletime.hpp  primes_ct.hpp
include/core/internal/math/: IntExpIntLog.hpp  IntRoot.hpp  Int_ExpLog.hpp  math_utils.hpp  primes.hpp  primes_compiletime.hpp  primes_ct.hpp
include/core/internal/math/tables/: EratosthenesSieve.hpp  EratosthenesSieve_table.hpp  LUTs.hpp  MaxExp4Base_table.hpp  PrimeEratostenesSieve_lookup.hpp  PrimeList.hpp
include/fixed_length/: int_reg_digs_t.hpp  nat_reg_digs_t.hpp  numeric_traits_specializations.hpp
include/fixed_length/containers/: reg_digs_t.hpp
include/unlimited_length/containers/: dig_string_t.hpp
include/variants/: digit_variant_t.hpp  register_variant_t.hpp  variant_types.hpp
profiles/: gcc  msvc
scripts/: detect_catch2.py
src/: GetTableMaxExp4Base.cpp  MaxExp4BaseObtenTabla.cpp  MaxExp4Base_lookup.hpp  ObtieneTablaDePrimos.cpp  PrimeEratostenesSieve.cpp  obtencion_tabla_de_primos.cpp  primos.csv
tests/: basic_compilation_test.cpp  catch2_implementation.cpp  catch2_wrapper.hpp  meson.build  test_01_math_tables.cpp  test_02_append.cpp  test_03_core_internal.cpp  test_04_dig_t.cpp  test_05_dig_t_constructors.cpp  test_06_dig_t_assignations.cpp  test_07_dig_t_conversions.cpp  test_08_dig_t_operadores.cpp  test_08_dig_t_otros_operadores_01.cpp  test_09_dig_t_algebra.cpp  test_10_dig_t_io.cpp  test_11_basic_types.cpp  test_12_Int_ExpLog.cpp  test_13_IntRoot.cpp  test_14_primes.cpp  test_15_conversions.cpp  test_LUT_of_primes.cpp  test_dig_t.cpp  test_lookup_tables.cpp  test_primes_compiletime_catch2.cpp  test_primes_compiletime_static.cpp
